maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:9: error: not found: value estsurBiscuit
  while(!estsurBiscuit() && getDirection() == direction.NORTH){
         ^IslandMaze:9: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.IslandMaze
  while(!estsurBiscuit() && getDirection() == direction.NORTH){
                                              ^