maze.island.IslandMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    if (!estFaceMur){
      avance()
    }
    gauche()
    }
  while(!estsurBiscuit() && getDirection() == direction.NORTH){
    keepHandOnWallSide()
  }
}



def keepHandOnWallSide(){
  gauche();
  if (estFaceMur()){
    while(estFaceMur()){
    droite();
  }
    avance()
  }
  else{
    avance()
  }}